Fix new tabs flickering on click

--- a/app/assets/stylesheets/polaris_view_components.css
+++ b/app/assets/stylesheets/polaris_view_components.css
@@ -759,6 +759,9 @@
   margin-bottom: var(--p-space-200);
 }html[class~="Polaris-Summer-Editions-2023"] .Polaris-LegacyTabs__Wrapper:has(+.Polaris-IndexTable) {
     margin-bottom: 0 !important;
+  }html[class~="Polaris-Summer-Editions-2023"] .Polaris-Tabs__Wrapper .Polaris-Tabs__Tab:active, html[class~="Polaris-Summer-Editions-2023"] .Polaris-Tabs__Wrapper .Polaris-Tabs__Tab:focus {
+    background-color: var(--p-color-bg-fill-transparent-hover);
+    color: var(--p-color-text-brand);
   }html[class~="Polaris-Summer-Editions-2023"] .Polaris-TextField input[type="date"], html[class~="Polaris-Summer-Editions-2023"] .Polaris-TextField input[type="time"] {
     display: block;
   }.Polaris-Tooltip {
