--- a/app/assets/stylesheets/polaris_view_components/tabs.pcss
+++ b/app/assets/stylesheets/polaris_view_components/tabs.pcss
@@ -5,3 +5,10 @@ html[class~="Polaris-Summer-Editions-2023"] .Polaris-LegacyTabs__Wrapper {
     margin-bottom: 0 !important;
   }
 }
+
+html[class~="Polaris-Summer-Editions-2023"] .Polaris-Tabs__Wrapper {
+  .Polaris-Tabs__Tab:active, .Polaris-Tabs__Tab:focus {
+    background-color: var(--p-color-bg-fill-transparent-hover);
+    color: var(--p-color-text-brand);
+  }
+}
